--- a/atlancy/grails-app/i18n/messages.properties
+++ b/atlancy/grails-app/i18n/messages.properties
@@ -61,7 +61,7 @@ sms.list.label =(SMS) הודעות טקסט
 # ניווט
 nav.home = דף הבית
 nav.applications = אפליקציות
-nav.applications.spyboy = ספייבוי
+nav.applications.secrecy = סיקרסי
 nav.applications.trivia = טריווילס
 nav.applications.backandpack = באקפאק
 nav.applications.sevicecom = שירוטל
