--- a/atlancy/grails-app/i18n/messages.properties
+++ b/atlancy/grails-app/i18n/messages.properties
@@ -90,6 +90,9 @@ login.tab.logmein = התחבר
 login.tab.registerMe=הירשם
 login.tab.close = סגור
 
+register.required.failed = חובה להזין ערך בכל השדות.
+register.required.success = הנתונים נשמרו בהצלחה.
+
 #sms folder name
 sms.folderName.inbox = הודעה נכנסת
 sms.folderName.sent = הודעה יוצאת
